# desafio-mba-fc

./: MANIFEST.in  PUBLISHING.md  README.md  env.example  pyproject.toml  requirements.txt  setup.cfg
src/: chat.py  context.md  ingest.py  search.py
