[metadata]
name = desafio-mba-fc-01
version = 0.1.0
description = Chat Inteligente para Documentos PDF
long_description = file: README.md
long_description_content_type = text/markdown
author = almirfontenele
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
py_modules =
    chat
    ingest
    search
install_requires =
    fastapi==0.115.6
    uvicorn==0.32.1
    python-dotenv==1.1.1
    langchain>=0.3.0
    langchain-community>=0.3.0
    langchain-core>=0.3.0
    langchain-openai>=0.3.0
    langchain-google-genai>=2.0.0
    langchain-postgres>=0.0.10
    langchain-text-splitters>=0.3.0
    psycopg2-binary==2.9.10
    pgvector==0.3.6
    SQLAlchemy==2.0.43
    pypdf==6.0.0
    openai==1.102.0
    google-generativeai>=0.7.0
    numpy==2.3.2
    tqdm==4.67.1
python_requires = >=3.8

[options.extras_require]
dev =
    build
    twine
